# sample_applications

./: CMakeLists.txt  README  README.md  analyze_caliper.py  fftAgencyFig.sh  run.sh
Agency/: CMakeLists.txt  analyze_caliper.py  mmultAgency.cpp  mmultAgency.cu  run.sh
common/: CMakeLists.txt  timing.cxx  timing.hxx
dependent_bench/: CMakeLists.txt  main.cxx
dependent_index_sets/: CMakeLists.txt  dependentIndexSets.cxx
fft/: CMakeLists.txt  README.md  fftRajaOmp.cxx  fftRajaSequential.cxx  fftSequential.cpp  fftSequential.cxx  fftTranspose.cxx
fft2d/: CMakeLists.txt  fft2d.cxx  fft2d.hxx  fft2dRajaOmp.cxx  fft2dRajaSequential.cxx  fft2dSequential.cxx
fft_agency/: CMakeLists.txt  fft.cxx
matrix_multiplication/: CMakeLists.txt  README.md  mmult.cu  mmult.cuh  mmult.cxx  mmult_gpu.cxx  view.hxx
reducerTests/: CMakeLists.txt  agencyReducer.hxx  reducer.cxx
